--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js ",
-    "build": "node index.js"
+    "dev": "nodemon ./src/index.js ",
+    "build": "node ./src/index.js",
+    "vercel-build": "echo hello"
   },
   "keywords": [],
   "author": "",
